# jornada-de-dados

./: README.md
aula_04_bootcamp/: aula_algoritmos.py  example.csv
aula_05_bootcamp/: README.md
aula_06_bootcamp/: .flake8  .pre-commit-config.yaml  main.py  main_2.py  pyproject.toml
aula_07_bootcamp/: etl.py  exemplo_00.py  main.py  vendas.csv
aula_08_bootcamp/: dados.parquet  etl.py  pyproject.toml
aula_09_bootcamp/: dados.parquet  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  tenacity_exemplo.py  utils_log.py
aula_12_bootcamp/: exemplo.csv  pyproject.toml
aula_12_bootcamp/src/: usa_class.py
aula_12_bootcamp/src/interface/classes/: csv_class.py
aula_13_14_bootcamp/src/: __main__.py
aula_13_14_bootcamp/src/lib/classes/: CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
aula_15_bootcamp/: pyproject.toml
aula_15_bootcamp/Collector/: main.py
aula_15_bootcamp/Collector/tools/aws/: client.py
aula_15_bootcamp/FakeApi/data/: products.csv
aula_16_bootcamp/: database.db  main.py  pyproject.toml
aula_17_bootcamp/: desafio.db  desafio.py  desafio_query.py  exemplo_01.py  meubanco.db  pyproject.toml
