[project]
name = "aula-08-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "wizard-moises-ximenes",email = "moises.ximenes5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera (>=0.26.1,<0.27.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
