[project]
name = "aula-17-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "wizard-moises-ximenes",email = "moises.ximenes5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
